<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    tools:context="com.example.dell.quiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background">
        <TextView
            style="@style/Title"
            android:text="@string/title"/>

        <TextView
            style="@style/Question"
            android:text="@string/intro"/>

        <TextView
            style="@style/Question"
            android:text="@string/Q1"/>
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/Ans1a"
                style="@style/Choice"
                android:text="@string/A1a" />
            <RadioButton
                android:id="@+id/Ans1b"
                style="@style/Choice"
                android:text="@string/A1b" />
            <RadioButton
                android:id="@+id/Ans1c"
                style="@style/Choice"
                android:text="@string/A1c" />
        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/Q2"/>
        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/Ans2a"
                style="@style/Choice"
                android:text="@string/A2a" />
            <RadioButton
                android:id="@+id/Ans2b"
                style="@style/Choice"
                android:text="@string/A2b" />
            <RadioButton
                android:id="@+id/Ans2c"
                style="@style/Choice"
                android:text="@string/A2c" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/Q3"/>
        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/Ans3a"
                style="@style/Choice"
                android:text="@string/A3a" />
            <RadioButton
                android:id="@+id/Ans3b"
                style="@style/Choice"
                android:text="@string/A3b" />

        </RadioGroup>

        <TextView
            style="@style/Question"
            android:text="@string/Q4"/>
        <CheckBox
            android:id="@+id/Ans4a"
            style="@style/Choice"
            android:text="@string/A4a"/>
        <CheckBox
            android:id="@+id/Ans4b"
            style="@style/Choice"
            android:text="@string/A4b"/>
        <CheckBox
            android:id="@+id/Ans4c"
            style="@style/Choice"
            android:text="@string/A4c"/>

        <TextView
            style="@style/Question"
            android:text="@string/Q5"/>
        <EditText
            android:id="@+id/Ans5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/Q5hint"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <Button
                style="@style/Button"
                android:id="@+id/rst"
                android:text="@string/Reset"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:onClick="reset"/>

            <Button
                style="@style/Button"
                android:id="@+id/submit"
                android:text="@string/Submit"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:onClick="submit" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>